@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ae.apps.messagecounter"
-    android:versionCode="255"
+    android:versionCode="265"
     android:versionName="2.2" >
 
     <uses-sdk
@@ -53,6 +53,13 @@
         <receiver android:name=".receivers.BootCompletedReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        
+        <receiver android:name=".receivers.PackageReplacedReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_REPLACED" />
+                <data android:scheme="package" android:path="com.ae.apps.messagecounter"/>
             </intent-filter>
         </receiver>
     </application>
