@@ -159,3 +159,6 @@ MessageCounter 2.1.20 [December 2013]
  - [ADDED] 		Previous cycle stats
  - [CHANGED]	Sent Messages screen layout
  - [CHANGED]	Simplified UI
+ 
+ MessageCounter 2.2.90 [May 2014]
+ - [FIXED]		Service was not started after app update
